[package]
name = "bd"
version = "0.1.1"
authors = ["prataprc <prataprc@gmail.com>"]
description = "big data tool kit"
readme = "README.md"
keywords = ["bigdata", "json", "jq", "storage"]
categories = ["algorithms", "database", "encoding"]
license = "MIT"
license-file = "LICENSE-MIT"
repository = "https://github.com/bnclabs/bd"
documentation = "https://docs.rs/bd"
homepage = "https://github.com/bnclabs/db"

[badges]

maintenance = { status = "actively-developed" }

[dependencies]
regex = "1"

[dependencies.nom]
version = "4.0.0"
features = ["regexp", "regexp_macros"]
