[package]
name = "bd"
version = "0.1.2"
authors = ["prataprc <prataprc@gmail.com>"]
description = "big data tool kit"
readme = "README.md"
keywords = ["bigdata", "json", "jq", "storage"]
categories = ["algorithms", "database", "encoding"]
license = "MIT"
repository = "https://github.com/bnclabs/bd"
documentation = "https://docs.rs/bd"
homepage = "https://github.com/bnclabs/bd"

[badges]

maintenance = { status = "actively-developed" }

[dependencies]
regex = "1"

[dependencies.nom]
version = "4.0.0"
features = ["regexp", "regexp_macros"]
